# comfyui-refocus

./: .gitignore  LICENSE  LICENSES.md  README.md  __init__.py  download_models.bat  package.json  pyproject.toml  requirements.txt
nodes/: __init__.py  bokeh.py  deblur.py  defocus_map.py  depth_pro.py  genfocus_generate.py  genfocus_loader.py  genfocus_lora.py  pipeline.py
pipeline/: __init__.py  condition.py  generate.py  lora_utils.py  transformer_forward.py
scripts/: download_models.py
utils/: __init__.py  comfyui_integration.py  flux_generate.py  genfocus_core.py
workflows/: workflow_advanced_conditions.json  workflow_bokeh_full.json  workflow_deblur_simple.json
